# supply-chain-sentinel

./: .gitignore  README.md  pyproject.toml
pipelines/flows/: workflow.py
prompts/: system_prompt.md
src/sentinel/: news_ingestion.py  news_scoring.py
src/ui/: main.py
